--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -58,6 +58,7 @@ logging:
       level: DEBUG
 
 app:
+  base-url: ${APP_BASE_URL:http://localhost:${SERVER_PORT:8080}}
   firebase-configuration: |
     {
         "type": "service_account",
