--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -103,7 +103,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            scope: profile, email
+            scope: profile, emaili
             redirect-uri: "{baseUrl}/api/v1/auth/oauth2/callback/{registrationId}"
 
           kakao:
