feat: 약관 동의 여부를 저장하도록 수정 및 OAuth 연동 관련 검증 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -103,7 +103,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            scope: profile, emaili
+            scope: profile, email
             redirect-uri: "{baseUrl}/api/v1/auth/oauth2/callback/{registrationId}"
 
           kakao:
