--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -222,3 +222,11 @@ storage:
       base-url: https://cdn.example.com
       key-name: ${CDN_KEY_NAME}
       private-key: ${CDN_PRIVATE_KEY}
+
+sentry:
+  dsn: ${SENTRY_DSN}
+  environment: ${spring.profiles.active}
+  exception-resolver-order: -2147483647
+  max-request-body-size: always
+  send-default-pii: true
+  traces-sample-rate: ${SENTRY_TRACES_SAMPLE_RATE:1.0}
