chore: Sentry에서 Request Body를 로깅하지 않도록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -227,6 +227,6 @@ sentry:
   dsn: ${SENTRY_DSN}
   environment: ${spring.profiles.active}
   exception-resolver-order: -2147483647
-  max-request-body-size: always
-  send-default-pii: true
+  max-request-body-size: none
+  send-default-pii: false
   traces-sample-rate: ${SENTRY_TRACES_SAMPLE_RATE:1.0}
