feat: 임시 커리큘럼 관리 http 추가

--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,6 @@ $RECYCLE.BIN/
 !**/src/test/**/build/
 !**/src/main/**/out/
 !**/src/test/**/out/
+
+# HTTP Client private env (tokens)
+http-client.private.env.json
