chore: codecov 목표 커버리지 및 설정 수정

--- a/codecov.yml
+++ b/codecov.yml
@@ -2,11 +2,51 @@ coverage:
   status:
     project:
       default:
-        target: 70%
+        target: 20%
+        threshold: 5%
     patch:
       default:
-        target: 80%
+        target: 10%
+        threshold: 0.5%
 
 ignore:
+  # 1. DTO (Request/Response/Command/Info 등)
   - "src/main/java/**/dto/**"
+
+  # 2. Configuration 클래스
   - "src/main/java/**/config/**"
+
+  # 3. Domain Entity (JPA Entity)
+  - "src/main/java/**/domain/**/[A-Z]*.java"
+
+  # 4. Exception 클래스 (ErrorCode, DomainException)
+  - "src/main/java/**/exception/**"
+
+  # 5. Enum 클래스
+  - "src/main/java/**/enums/**"
+
+  # 6. Constants 클래스
+  - "src/main/java/**/constant/**"
+
+  # 7. Properties 클래스
+  - "src/main/java/**/*Properties.java"
+
+  # 8. Application Main 클래스
+  - "src/main/java/**/*Application.java"
+
+  # 9. Base 클래스 (BaseEntity, BaseCode 등)
+  - "src/main/java/**/common/Base*.java"
+
+  # 10. Global Response/Code 클래스
+  - "src/main/java/**/global/response/**"
+
+  # 11. Security Annotations
+  - "src/main/java/**/security/annotation/**"
+
+  # 12. Util 클래스 (필요시)
+  # - "src/main/java/**/util/**"
+
+comment:
+  layout: "reach,diff,flags,tree"
+  behavior: default
+  require_changes: false
