--- a/.editorconfig
+++ b/.editorconfig
@@ -40,3 +40,8 @@ indent_size = 4
 [*.md]
 max_line_length = 9999
 trim_trailing_whitespace = false
+
+# Spring REST Docs snippets
+[*.snippet]
+indent_style = space
+indent_size = 4
