feat: PR 제목을 검사하는 GitHub Action 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ concurrency:
 jobs:
   # Job 1: 빌드 및 테스트 (한 번만 실행)
   build-and-test:
+    name: Build & Run Tests
     runs-on: [ self-hosted, ci-runner ]
     # self-hosted 러너가 .. Dockerhub에서 IP 밴을 당한 것 같아서 ARM 환경의 GH hosted runner로 변경합니다.
     #    runs-on: ubuntu-latest
@@ -87,7 +88,7 @@ jobs:
             ENVIRONMENT="Test"
           elif [[ -n "$INPUT_ENV" ]]; then
             ENVIRONMENT="$INPUT_ENV"
-          
+
           # CD에서 호출한 경우 branch에 따라서 환경 결정
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             ENVIRONMENT="Production"
@@ -179,6 +180,7 @@ jobs:
       #          cache-from: type=gha
       #          #          cache-to: type=gha,mode=max
       #          cache-to: type=gha,mode=min
+
       - name: 📝 PR Comment & Commit Status
         if: always()  # 성공/실패 모두 실행
         uses: actions/github-script@v8
@@ -186,7 +188,7 @@ jobs:
           script: |
             const testFailed = '${{ steps.test.outcome }}' === 'failure';
             const isPR = context.eventName === 'pull_request';
-            
+
             // 테스트 실패 + PR이면 코멘트 작성
             if (testFailed && isPR) {
               await github.rest.issues.createComment({
@@ -196,7 +198,7 @@ jobs:
                 body: '⚠️ 테스트가 실패했습니다. 테스트 결과를 확인해주세요.'
               });
             }
-            
+
             // 커밋 상태 생성
             // status는 다음 중 하나: 'error', 'failure', 'pending', 'success'
             await github.rest.repos.createCommitStatus({
@@ -206,7 +208,7 @@ jobs:
               state: testFailed ? 'failure' : 'success',
               target_url: `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`,
               description: testFailed ? '테스트가 실패했습니다' : '빌드가 성공했습니다!',
-              context: 'Product Team CI'
+              context: 'Product Team Server CI'
             });
 
       - name: 📝 Build Summary
