feat: S3에서 파일 링크를 제공할 때 CloudFront를 이용하도록 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -242,8 +242,8 @@ storage:
     secret-access-key: ${S3_SECRET_ACCESS_KEY}
     cloudfront:
       enabled: false
+      distribution-domain: cdn.umc.it.kr
       private-key: ${CDN_PRIVATE_KEY}
-      distribution-domain: https://cdn.example.com
       key-pair-id: ${CDN_KEY_PAIR_ID}
 
   gcs:
